--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 DATABASE_URL=postgresql://postgres:Umamikode01@db.fuvsjuwdhjcittqbbrng.supabase.co:5432/postgres
+TRACKER_SCRIPT_NAME = "happenings"
